--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    max-height: 100vh;
     height: 100vh;
     margin: 0;
     background-color: #f0f4f8;
@@ -107,14 +108,14 @@ table tr td:last-child {
     width: 200px;
     top: 20px;
     background-color: rgba(205, 133, 63, 0.9);
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
     padding-top: 40px;
     padding-bottom: 40px;
     text-align: center;
     border-radius: 8px;
+    margin-top: 100px;
     color: white;
     font-size: 1.5em;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.3);
+    justify-content: center;
+    align-items: center;
 }
